=== 1.0.0.alpha3

=== 1.0.0.alpha2 2012-04-09

* Fix for when not using a config file.

=== 1.0.0.alpha 2012-04-09

* Complete rewrite.
* New style checks:
  * Indentation.
  * LOC count in a class.
  * LOC count in a method.
  * Trailing newlines at EOF.
* Other new features:
  * Configuration file use--both .tailor and ~/.tailorrc--lets you specify
    groups of files.
  * Turn checks off via CLI options.

=== 0.1.5 2011-09-27

* Fixed post install message to use heredoc instead of %w (<-wth was I thinking?)

=== 0.1.4 2011-09-27

* gh-81: Return exit status of 1 if problems were found.
* Fixed Rakefile and .gemspec. [sergio-fry]
* Removed dependency on hoe for gem building.
* Added -v/--version to bin/tailor.
* Fixed documenatation indentation.

=== 0.1.3 2010-12-14

* Added check for .erb files.

=== 0.1.2 2010-09-01

* Added ability to check a single file.

=== 0.1.0 2010-05-21

* Added checks for spacing around { and }.
* Added check for spacing around ternary ':'.
* Colorized error messages to be red.
* Problem message are now grouped by file line (when multiple problems per line).
* Temporarily removed reporting of # of trailing whitespaces.

=== 0.0.3 2010-04-26

* Added checks for spacing around commas.
* Added checks for spacing around open/closed parenthesis/brackets.

=== 0.0.2 2010-04-23

* Renamed project from ruby_style_checker to Tailor.
* Added check for lines > 80 characters.

=== 0.0.1 2010-04-22

* Initial release!
* Command-line executable takes a directory and checks all files, recursively.
* Checks for:
  * Indentation
    * Hard-tabs in indentation
  * Name cases
    * Snake case class & module names
    * Camel case method names
  * Extra whitespace
    * At the end of lines
    * On empty lines
    * After commas